Phase 1: replace hard-coded UI strings and colors with UIConfig/UITheme and remove unused toString()